--- a/environment.yml
+++ b/environment.yml
@@ -1,23 +1,35 @@
 name: aifellowship
 channels:
-  - conda-forge
+  - pytorch
   - anaconda
+  - conda-forge
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=5.1=1_gnu
+  - abseil-cpp=20211102.0=hd4dd3e8_0
+  - aiohttp=3.8.3=py38h5eee18b_0
+  - aiosignal=1.2.0=pyhd3eb1b0_0
   - asttokens=2.0.5=pyhd3eb1b0_0
+  - async-timeout=4.0.2=py38h06a4308_0
   - attrs=22.2.0=pyh71513ae_0
   - backcall=0.2.0=pyhd3eb1b0_0
   - blas=1.0=mkl
   - bleach=6.0.0=pyhd8ed1ab_0
   - brotli=1.0.9=h5eee18b_7
   - brotli-bin=1.0.9=h5eee18b_7
+  - brotlipy=0.7.0=py38h27cfd23_1003
+  - bzip2=1.0.8=h7b6447c_0
+  - c-ares=1.19.0=h5eee18b_0
   - ca-certificates=2023.01.10=h06a4308_0
   - cairo=1.14.12=h8948797_3
-  - certifi=2022.12.7=py38h06a4308_0
+  - certifi=2023.5.7=py38h06a4308_0
+  - cffi=1.15.0=py38h7f8727e_0
   - contourpy=1.0.5=py38hdb19cb5_0
+  - cpuonly=2.0=0
+  - cryptography=39.0.1=py38h9ce1e76_0
   - cycler=0.11.0=pyhd3eb1b0_0
+  - dataclasses=0.8=pyh6d0b6a4_7
   - dbus=1.13.18=hb2f20db_0
   - debugpy=1.5.1=py38h295c915_0
   - decorator=5.1.1=pyhd3eb1b0_0
@@ -25,14 +37,20 @@ dependencies:
   - entrypoints=0.4=py38h06a4308_0
   - executing=0.8.3=pyhd3eb1b0_0
   - expat=2.4.9=h6a678d5_0
+  - ffmpeg=4.3=hf484d3e_0
   - fontconfig=2.14.1=h52c9d5c_1
   - fonttools=4.25.0=pyhd3eb1b0_0
   - freetype=2.12.1=h4a9f257_0
   - fribidi=1.0.10=h7b6447c_0
+  - frozenlist=1.3.3=py38h5eee18b_0
   - giflib=5.2.1=h5eee18b_1
   - glib=2.63.1=h5a9c865_0
+  - gmp=6.2.1=h295c915_3
+  - gmpy2=2.1.2=py38heeb90bb_0
+  - gnutls=3.6.15=he1e5248_0
   - graphite2=1.3.14=h295c915_1
   - graphviz=2.40.1=h21bd128_2
+  - grpc-cpp=1.48.2=h5bf31a4_0
   - gst-plugins-base=1.14.0=hbbd80ab_1
   - gstreamer=1.14.0=hb453b48_1
   - harfbuzz=1.8.8=hffaf4a1_0
@@ -44,12 +62,12 @@ dependencies:
   - ipython=8.4.0=py38h06a4308_0
   - ipython_genutils=0.2.0=py_1
   - jedi=0.18.1=py38h06a4308_1
-  - jinja2=2.11.3=pyhd8ed1ab_2
   - jpeg=9e=h7f8727e_0
   - jsonschema=4.17.3=pyhd8ed1ab_0
   - jupyter_client=7.2.2=py38h06a4308_0
   - jupyter_core=4.10.0=py38h06a4308_0
   - kiwisolver=1.4.4=py38h6a678d5_0
+  - lame=3.100=h7b6447c_0
   - lcms2=2.12=h3be6417_0
   - lerc=3.0=h295c915_0
   - libbrotlicommon=1.0.9=h5eee18b_7
@@ -60,17 +78,21 @@ dependencies:
   - libffi=3.2.1=hf484d3e_1007
   - libgcc-ng=11.2.0=h1234567_1
   - libgomp=11.2.0=h1234567_1
+  - libiconv=1.16=h7f8727e_2
+  - libidn2=2.3.2=h7f8727e_0
   - libpng=1.6.37=hbc83047_0
+  - libprotobuf=3.20.3=he621ea3_0
   - libsodium=1.0.18=h7b6447c_0
   - libstdcxx-ng=11.2.0=h1234567_1
+  - libtasn1=4.19.0=h5eee18b_0
   - libtiff=4.5.0=hecacb30_0
+  - libunistring=0.9.10=h27cfd23_0
   - libuuid=1.41.5=h5eee18b_0
   - libwebp=1.2.4=h11a3e52_0
   - libwebp-base=1.2.4=h5eee18b_0
   - libxcb=1.15=h7f8727e_0
   - libxml2=2.9.14=h74e7548_0
   - lz4-c=1.9.4=h6a678d5_0
-  - markupsafe=1.1.1=py38h497a2fe_3
   - matplotlib=3.6.2=py38h06a4308_0
   - matplotlib-base=3.6.2=py38h945d387_0
   - matplotlib-inline=0.1.2=pyhd3eb1b0_2
@@ -79,14 +101,20 @@ dependencies:
   - mkl-service=2.4.0=py38h7f8727e_0
   - mkl_fft=1.3.1=py38hd3c417c_0
   - mkl_random=1.2.2=py38h51133e4_0
+  - mpc=1.1.0=h10f8cd9_1
+  - mpfr=4.0.2=hb69a4c5_1
+  - mpmath=1.2.1=py38h06a4308_0
+  - multidict=6.0.2=py38h5eee18b_0
   - munkres=1.1.4=py_0
   - nbformat=5.7.3=pyhd8ed1ab_0
   - ncurses=6.4=h6a678d5_0
   - nest-asyncio=1.5.5=py38h06a4308_0
+  - nettle=3.7.3=hbbd107a_1
+  - networkx=2.8.4=py38h06a4308_1
   - notebook=5.7.11=py38h578d9bd_0
-  - numpy=1.23.5=py38h14f4228_0
-  - numpy-base=1.23.5=py38h31eccc5_0
-  - openssl=1.1.1s=h7f8727e_0
+  - oauthlib=3.2.2=py38h06a4308_0
+  - openh264=2.1.1=h4ff587b_0
+  - openssl=1.1.1t=h7f8727e_0
   - packaging=22.0=py38h06a4308_0
   - pandoc=2.19.2=ha770c72_0
   - pandocfilters=1.5.0=pyhd8ed1ab_0
@@ -103,17 +131,24 @@ dependencies:
   - psutil=5.9.0=py38h5eee18b_0
   - ptyprocess=0.7.0=pyhd3eb1b0_2
   - pure_eval=0.2.2=pyhd3eb1b0_0
+  - pycparser=2.21=pyhd3eb1b0_0
   - pygments=2.11.2=pyhd3eb1b0_0
+  - pyjwt=2.4.0=py38h06a4308_0
+  - pyopenssl=23.0.0=py38h06a4308_0
   - pyparsing=3.0.9=py38h06a4308_0
   - pyqt=5.9.2=py38h05f1152_4
   - pyrsistent=0.18.0=py38heee7806_0
+  - pysocks=1.7.1=py38h06a4308_0
   - python=3.8.0=h0371630_2
   - python-dateutil=2.8.2=pyhd3eb1b0_0
   - python-fastjsonschema=2.16.2=pyhd8ed1ab_0
   - python-graphviz=0.20.1=py38h06a4308_0
   - python_abi=3.8=2_cp38
+  - pytorch=2.0.1=py3.8_cpu_0
+  - pytorch-mutex=1.0=cpu
   - pyzmq=23.2.0=py38h6a678d5_0
   - qt=5.9.7=h5867ecd_1
+  - re2=2022.04.01=h295c915_0
   - readline=7.0=h7b6447c_5
   - send2trash=1.8.0=pyhd8ed1ab_0
   - setuptools=65.6.3=py38h06a4308_0
@@ -121,9 +156,14 @@ dependencies:
   - six=1.16.0=pyhd3eb1b0_1
   - sqlite=3.33.0=h62c20be_0
   - stack_data=0.2.0=pyhd3eb1b0_0
+  - sympy=1.11.1=py38h06a4308_0
+  - tensorboard-data-server=0.7.0=py38h52d8a92_0
+  - tensorboard-plugin-wit=1.8.1=py38h06a4308_0
   - terminado=0.17.1=pyh41d4057_0
   - testpath=0.6.0=pyhd8ed1ab_0
   - tk=8.6.12=h1ccaba5_0
+  - torchaudio=2.0.2=py38_cpu
+  - torchvision=0.15.2=py38_cpu
   - tornado=6.1=py38h27cfd23_0
   - traitlets=5.1.1=pyhd3eb1b0_0
   - typing_extensions=4.4.0=pyha770c72_0
@@ -131,41 +171,94 @@ dependencies:
   - webencodings=0.5.1=py_1
   - wheel=0.37.1=pyhd3eb1b0_0
   - xz=5.2.10=h5eee18b_1
+  - yarl=1.8.1=py38h5eee18b_0
   - zeromq=4.3.4=h2531618_0
   - zipp=3.13.0=pyhd8ed1ab_0
   - zlib=1.2.13=h5eee18b_0
   - zstd=1.5.2=ha4553b6_0
   - pip:
-      - asgiref==3.6.0
+      - absl-py==1.4.0
+      - asgiref==3.7.2
+      - astunparse==1.6.3
       - backports-zoneinfo==0.2.1
+      - beautifulsoup4==4.12.2
+      - blinker==1.6.2
+      - cachetools==5.3.0
+      - chardet==3.0.4
       - charset-normalizer==3.0.1
+      - click==8.1.3
       - cloudpickle==2.2.1
-      - django==4.2
-      - django-cors-headers==3.14.0
+      - django==4.2.3
+      - django-cors-headers==4.2.0
       - djangorestframework==3.14.0
       - doublemetaphone==1.1
       - et-xmlfile==1.1.0
+      - filelock==3.12.0
+      - flask==2.3.2
+      - flatbuffers==23.5.9
+      - fuse-grader==0.1.9
       - future==0.18.3
+      - gast==0.4.0
       - gdown==4.6.3
+      - google-auth==2.18.1
+      - google-auth-oauthlib==1.0.0
+      - google-pasta==0.2.0
+      - grpcio==1.54.2
       - gym==0.26.2
+      - gym-anytrading==1.3.2
       - gym-notices==0.0.8
-      - idna==3.4
+      - h5py==3.8.0
+      - idna==2.10
+      - itsdangerous==2.1.2
+      - jax==0.4.10
+      - jinja2==3.1.2
+      - joblib==1.2.0
+      - keras==2.12.0
+      - keras-preprocessing==1.1.2
       - kmodes==0.12.2
+      - libclang==16.0.0
+      - markdown==3.4.3
+      - markupsafe==2.1.2
+      - ml-dtypes==0.1.0
       - nbconvert==5.5.0
+      - nltk==3.8.1
+      - numpy==1.24.3
       - openpyxl==3.1.1
+      - opt-einsum==3.3.0
+      - pandas==2.0.1
       - patsy==0.5.3
       - phonenumbers==8.13.5
       - pillow==9.4.0
       - probableparsing==0.0.1
       - probablepeople==0.5.4
+      - protobuf==4.23.1
+      - pyasn1==0.5.0
+      - pyasn1-modules==0.3.0
       - pydotplus==2.0.2
-      - pysocks==1.7.1
       - python-crfsuite==0.9.8
-      - requests==2.28.2
+      - pytz==2023.3
+      - regex==2023.6.3
+      - requests==2.25.0
+      - requests-oauthlib==1.3.1
+      - rsa==4.9
       - scikit-learn==1.2.2
+      - scipy==1.10.1
+      - seaborn==0.12.2
+      - soupsieve==2.4.1
       - sqlparse==0.4.4
       - statsmodels==0.13.5
+      - tensorboard==2.12.3
+      - tensorflow==2.12.0
+      - tensorflow-addons==0.21.0
+      - tensorflow-estimator==2.12.0
+      - tensorflow-io-gcs-filesystem==0.32.0
+      - termcolor==2.3.0
+      - threadpoolctl==3.1.0
       - tqdm==4.64.1
+      - typeguard==2.13.3
+      - tzdata==2023.3
       - urllib3==1.26.14
+      - werkzeug==2.3.4
+      - wrapt==1.14.1
       - xgboost==1.7.3
 prefix: /home/nirajan/miniconda3/envs/aifellowship
